<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.view.fragment.CreateProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_profile"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="64dp"
            app:cardElevation="2dp"
            app:chainUseRtl="true"
            app:layout_constraintBottom_toTopOf="@id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <ImageView
                android:id="@+id/select_profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/secondary"
                android:contentDescription="@string/select_profile_photo"
                android:scaleType="centerInside"
                android:src="@drawable/ic_upload_photo" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:text="@string/name"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/input_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="64dp"
            android:hint="@string/name_lastname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:text="@string/user"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/input_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="64dp"
            android:hint="@string/user_symbol"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:mask="\@________________"
            app:maskCharacter="_"
            app:maskStyle="normal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:text="@string/status"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/input_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_username" />

        <EditText
            android:id="@+id/input_status"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="64dp"
            android:hint="@string/status_example"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:id="@+id/button_create_profile"
            android:layout_height="wrap_content"
            android:background="@drawable/button_start_backhground"
            android:backgroundTint="@color/secondary"
            android:paddingHorizontal="48sp"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_status"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/bottom_infos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>