<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.StartFragment">

    <ImageView
        android:id="@+id/people_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/people_background"
        android:src="@drawable/people_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rounded_background"/>

    <View
        android:id="@+id/rounded_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/start_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/people_background" />

    <TextView
        android:id="@+id/join_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginVertical="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/join_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rounded_background" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_us" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_lets_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_start_backhground"
        android:minHeight="48dp"
        android:paddingHorizontal="72dp"
        android:paddingVertical="12dp"
        android:text="@string/lets_start"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_infos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>