<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.view.fragment.InsertNumberFragment">

        <ImageView
            android:id="@+id/image_send_code"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/send_code_image"
            android:src="@drawable/ic_send_code"
            app:layout_constraintBottom_toTopOf="@id/label_insert_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="******"
            android:textColor="@color/secondary"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_send_code" />

        <TextView
            android:id="@+id/label_insert_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_number"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_subtitle_insert_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/insert_number_subtitle"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_insert_number" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:gravity="center"
            android:hint="@string/hint_number"
            android:inputType="number"
            app:chainUseRtl="true"
            app:layout_constraintBottom_toTopOf="@id/button_send_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_subtitle_insert_number"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed"
            app:mask="+55 (__) _____-____"
            app:maskCharacter="_"
            app:maskStyle="completable" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_start_backhground"
            android:backgroundTint="@color/secondary"
            android:minHeight="48dp"
            android:paddingHorizontal="72dp"
            android:paddingVertical="12dp"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/credits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_phone_number"/>

        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_infos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>